--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
     background-color: black;
 }
 
-/* hero background image */
+/*  background image */
 .bgimage {
     height:100vh;
     background: url('https://marketplace.canva.com/EAFTQEWI-Ko/1/0/1600w/canva-black-sky-galaxy-stars-desktop-wallpaper-iWMZ0xN6KXs.jpg');
     background-size:cover;
     position:relative;
 }
-/* text css above hero image*/
+/* text css above o image*/
 .hero_title {
     font-size: 4.5rem;
 }
